k8s-apps/xwiki/kustomize/final.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: mysql
    app.kubernetes.io/version: 8.4.4
    helm.sh/chart: mysql-12.3.2
  name: xwiki-mysql
  namespace: open4goods
spec:
  ports:
  - name: mysql
    nodePort: null
    port: 3306
    protocol: TCP
    targetPort: mysql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: mysql
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: mysql
    app.kubernetes.io/version: 8.4.4
    helm.sh/chart: mysql-12.3.2
  name: xwiki-mysql-headless
  namespace: open4goods
spec:
  clusterIP: None
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/name: mysql
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: xwiki
    helm.sh/chart: xwiki-1.5.5
  name: xwiki
spec:
  ports:
  - name: null
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/name: xwiki
  sessionAffinity: ClientIP
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: mysql
    app.kubernetes.io/version: 8.4.4
    helm.sh/chart: mysql-12.3.2
  name: xwiki-mysql
  namespace: open4goods
spec:
  podManagementPolicy: ""
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: xwiki
      app.kubernetes.io/name: mysql
      app.kubernetes.io/part-of: mysql
  serviceName: xwiki-mysql-headless
  template:
    metadata:
      annotations:
        checksum/configuration: e198c9f4d10a7f61748adad0a3360877c135802418b2be000ba95c73fd789a3c
      labels:
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: xwiki
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mysql
        app.kubernetes.io/part-of: mysql
        app.kubernetes.io/version: 8.4.4
        helm.sh/chart: mysql-12.3.2
    spec:
      affinity:
        nodeAffinity: null
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: xwiki
                  app.kubernetes.io/name: mysql
              topologyKey: kubernetes.io/hostname
            weight: 1
      automountServiceAccountToken: false
      containers:
      - env:
        - name: BITNAMI_DEBUG
          value: "false"
        - name: MYSQL_ROOT_PASSWORD_FILE
          value: /opt/bitnami/mysql/secrets/mysql-root-password
        - name: MYSQL_ENABLE_SSL
          value: "no"
        - name: MYSQL_USER
          value: xwiki
        - name: MYSQL_PASSWORD_FILE
          value: /opt/bitnami/mysql/secrets/mysql-password
        - name: MYSQL_PORT
          value: "3306"
        - name: MYSQL_DATABASE
          value: xwiki
        envFrom: null
        image: docker.io/bitnami/mysql:8.4.4-debian-12-r7
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - mysqladmin ping -h 127.0.0.1 -uroot -p$MYSQL_ROOT_PASSWORD
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - mysqladmin ping -h 127.0.0.1 -uroot -p$MYSQL_ROOT_PASSWORD
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 400m
            memory: 2Gi
          requests:
            cpu: 400m
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1001
          runAsNonRoot: true
          runAsUser: 1001
          seLinuxOptions: {}
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          exec:
            command:
            - sh
            - -c
            - mysqladmin ping -h 127.0.0.1 -uroot -p$MYSQL_ROOT_PASSWORD
          failureThreshold: 10
          initialDelaySeconds: 150
          periodSeconds: 10
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /bitnami/mysql
          name: data
        - mountPath: /tmp
          name: empty-dir
          subPath: tmp-dir
        - mountPath: /opt/bitnami/mysql/conf
          name: empty-dir
          subPath: app-conf-dir
        - mountPath: /opt/bitnami/mysql/tmp
          name: empty-dir
          subPath: app-tmp-dir
        - mountPath: /opt/bitnami/mysql/logs
          name: empty-dir
          subPath: app-logs-dir
        - mountPath: /docker-entrypoint-initdb.d
          name: custom-init-scripts
        - mountPath: /opt/bitnami/mysql/conf/my.cnf
          name: config
          subPath: my.cnf
        - mountPath: /opt/bitnami/mysql/secrets/
          name: mysql-credentials
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: xwiki-mysql
      volumes:
      - configMap:
          name: xwiki-mysql
        name: config
      - configMap:
          name: xwiki-mysql-init-scripts
        name: custom-init-scripts
      - name: mysql-credentials
        secret:
          items:
          - key: mysql-root-password
            path: mysql-root-password
          - key: mysql-password
            path: mysql-password
          secretName: xwiki-mysql
      - emptyDir: {}
        name: empty-dir
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      labels:
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: xwiki
        app.kubernetes.io/name: mysql
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
      storageClassName: longhorn
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: xwiki
    helm.sh/chart: xwiki-1.5.5
  name: xwiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: xwiki
      app.kubernetes.io/name: xwiki
  serviceName: xwiki
  template:
    metadata:
      annotations:
        checksum/configmap: 51e5f5e202d8bc43c5675bcf70da5b5b5a2ba9f693ec53466faa815af6c3c405
        checksum/initialization-configmaps: 779fb2a9731056f94c51eb81b132e0c950d10873edaee039e2df5a6a9c86460d
        checksum/initialization-secrets: 70367779dfae87485b30a4856d13561d88960b32bb4480a7740cd873b5556928
      labels:
        app.kubernetes.io/instance: xwiki
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: xwiki
        helm.sh/chart: xwiki-1.5.5
    spec:
      containers:
      - command:
        - /bin/bash
        - /entrypoint/start.sh
        image: xwiki:lts-mysql-tomcat
        imagePullPolicy: IfNotPresent
        name: xwiki
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
        volumeMounts:
        - mountPath: /usr/local/xwiki/data
          name: xwiki-data
        - mountPath: /configmaps
          name: configmaps
        - mountPath: /entrypoint
          name: entrypoint
          readOnly: true
      serviceAccountName: xwiki-sa
      volumes:
      - configMap:
          name: xwiki-init-scripts
        name: configmaps
      - name: secrets
        secret:
          secretName: xwiki-init-scripts
      - emptyDir:
          medium: Memory
          sizeLimit: 1Mi
        name: entrypoint
      - name: xwiki-data
  volumeClaimTemplates:
  - metadata:
      name: xwiki-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: longhorn
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: mysql
    app.kubernetes.io/version: 8.4.4
    helm.sh/chart: mysql-12.3.2
  name: xwiki-mysql
  namespace: open4goods
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 3306
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: xwiki
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: mysql
      app.kubernetes.io/version: 8.4.4
      helm.sh/chart: mysql-12.3.2
  policyTypes:
  - Ingress
  - Egress
